feat: Add Banner Image
Add a banner image for style.

--- a/HTML/HomePage.html
+++ b/HTML/HomePage.html
@@ -21,6 +21,9 @@
                     </ul>
                 </nav>
             </div>
+            <div class="banner-img">
+                <img src="/Images/BannerInspo.jpg" alt="A banner image of Eugen Sandow's arm from his 1902 book, The Gospel of Strength">
+            </div>
         </div>
     </body>
 </html>
