chore: Add Reminder
Add a reminder to check on unloading image later. File path and names are all correct.

--- a/HTML/HomePage.html
+++ b/HTML/HomePage.html
@@ -23,6 +23,7 @@
             </div>
             <div class="banner-img">
                 <img src="/Images/BannerInspo.jpg" alt="A banner image of Eugen Sandow's arm from his 1902 book, The Gospel of Strength">
+                <!--Image may not be loading. Fix that-->
             </div>
         </div>
     </body>
