feat: Add Article Links in Recent Posts
Create a recent posts area and add articles and links. most don't work as there is only one functional post.

--- a/HTML/HomePage.html
+++ b/HTML/HomePage.html
@@ -25,6 +25,39 @@
                 <img src="/Images/BannerInspo.jpg" alt="A banner image of Eugen Sandow's arm from his 1902 book, The Gospel of Strength">
                 <!--Image may not be loading. Fix that-->
             </div>
+            <div class="recent-posts">
+                <h1 class="recent-posts-title">Recent Posts</h1>
+                <div class="posts-cards">
+                    <article>
+                        <a href="BlogPost.html" class="article-link">
+                            <img src="/Images/LogoInspo.jpeg" alt="Not the image I want here, change later">
+                        </a>
+                        <a href="BlogPost.html" class="article-link">
+                            <h3>Sample Article Title, Change Later</h3>
+                        </a>
+                    </article>
+                    <article>
+                        <img src="/Images/LogoInspo.jpeg" alt="Not the image I want here, change later">
+                        <h3>E</h3>
+                    </article>
+                    <article>
+                        <img src="/Images/LogoInspo.jpeg" alt="Not the image I want here, change later">
+                        <h3>M</h3>
+                    </article>
+                    <article>
+                        <img src="/Images/LogoInspo.jpeg" alt="Not the image I want here, change later">
+                        <h3>P</h3>
+                    </article>
+                    <article>
+                        <img src="/Images/LogoInspo.jpeg" alt="Not the image I want here, change later">
+                        <h3>T</h3>
+                    </article>
+                    <article>
+                        <img src="/Images/LogoInspo.jpeg" alt="Not the image I want here, change later">
+                        <h3>Y</h3>
+                    </article>
+                </div>
+            </div>
         </div>
     </body>
 </html>
