--- a/HTML/HomePage.html
+++ b/HTML/HomePage.html
@@ -58,6 +58,11 @@
                     </article>
                 </div>
             </div>
+            <footer>
+                <img src="/Images/BannerInspo.jpg" alt="This is a placeholder and will be changed">
+                <h3>Some quote. I don't know I'll figure it out.</h3>
+                <!--I want the text to go over the image. Find out how to do that-->
+            </footer>
         </div>
     </body>
 </html>
