--- a/HTML/HomePage.html
+++ b/HTML/HomePage.html
@@ -8,6 +8,7 @@
     <body>
         <div class="homepage-content">
             <div class="nav-panel">
+                <img src="/Images/LogoInspo.jpeg" class="logo" alt="The image will be edited later">
                 <nav>
                     <ul>
                         <li class="nav-tab">
