fix: Correct link

--- a/HTML/HomePage.html
+++ b/HTML/HomePage.html
@@ -15,7 +15,7 @@
                             <a href="HomePage.html">Home</a>
                         </li>
                         <li class="nav-tab">
-                            <a href="Posts.html">Posts</a>
+                            <a href="PostsTab.html">Posts</a>
                         </li>
                         <li class="nav-tab">Share</li>
                         <li class="nav-tab">Subscribe</li>
