--- a/HTML/BlogPost.html
+++ b/HTML/BlogPost.html
@@ -4,6 +4,7 @@
         <title>Article Title | Personal Fitness Blog</title>
         <meta charset="UTF-8">
         <meta name="author" content="John Chaney">
+        <link rel="stylesheet" href="Stylesheet.css"/>
     </head>
     <body>
         <div class="article-content">
