--- a/HTML/PostsTab.html
+++ b/HTML/PostsTab.html
@@ -4,6 +4,7 @@
         <title>Posts | Personal Fitness Blog</title>
         <meta charset="UTF-8">
         <meta name="author" content="John Chaney">
+        <link rel="stylesheet" href="Stylesheet.css"/>
     </head>
     <body>
         <div class="posts-tab-content">
