fix: Stylesheet link

--- a/HTML/HomePage.html
+++ b/HTML/HomePage.html
@@ -4,7 +4,7 @@
         <title>Personal Fitness Blog</title>
         <meta charset="UTF-8">
         <meta name="author" content="John Chaney">
-        <link rel="stylesheet" href="/CSS/Stylesheet.css"/>
+        <link rel="stylesheet" href="../CSS/Stylesheet.css"/>
     </head>
     <body>
         <div class="homepage-content">
