fix: Update nav panel ul class

--- a/HTML/HomePage.html
+++ b/HTML/HomePage.html
@@ -11,7 +11,7 @@
             <div class="nav-panel">
                 <img src="/Images/LogoInspo.jpeg" class="logo" alt="The image will be edited later">
                 <nav>
-                    <ul>
+                    <ul class="nav-panel">
                         <li class="nav-tab">
                             <a href="HomePage.html">Home</a>
                         </li>
